ti-community-bots/dev/cluster/bots_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ti-community-bots
  labels:
    name: ti-community-bots
