ti-community-bots/dev/cluster/ti_sync_bot_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ti-community-bots
  name: ti-sync-bot
  labels:
    app: ti-sync-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ti-sync-bot
  template:
    metadata:
      labels:
        app: ti-sync-bot
    spec:
      containers:
        - name: ti-sync-bot
          image: ticommunityinfra/ti-sync-bot:v1.1.1
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: ti-sync-bot-config-volume
              mountPath: /etc/ti-sync-bot-config
              readOnly: true
      volumes:
        - name: ti-sync-bot-config-volume
          secret:
            secretName: ti-sync-bot-config
