ti-community-bots/dev/cluster/ti_sync_bot_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ti-community-bots
  name: ti-sync-bot
spec:
  selector:
    app: ti-sync-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
